Added markdown to HTML stencil component

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Ionic App</title>
+  <title>Notepad App</title>
 
   <base href="/" />
 
@@ -16,6 +16,11 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
+<!--   <script src='node_modules/markdowntohtml-component/dist/markdowntohtmlcomponent.js'></script>
+ --><!--     <script src='markdowntohtml-component/markdowntohtmlcomponent.js'></script>
+ -->
+    <!--   <script type="text/javascript" src='https://unpkg.com/markdowntohtml-component@0.0.1/dist/markdowntohtmlcomponent.js'></script>
+ -->
 </head>
 <body>
   <app-root></app-root>
