--- a/src/index.html
+++ b/src/index.html
@@ -11,16 +11,14 @@
   <meta name="msapplication-tap-highlight" content="no">
 
   <link rel="icon" type="image/png" href="assets/icon/favicon.png">
+  <link href="https://cdn.materialdesignicons.com/2.1.19/css/materialdesignicons.min.css" rel="stylesheet" />
 
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
-<!--   <script src='node_modules/markdowntohtml-component/dist/markdowntohtmlcomponent.js'></script>
- --><!--     <script src='markdowntohtml-component/markdowntohtmlcomponent.js'></script>
- -->
-    <!--   <script type="text/javascript" src='https://unpkg.com/markdowntohtml-component@0.0.1/dist/markdowntohtmlcomponent.js'></script>
- -->
+  <script src='node_modules/@pdestrais/mdtohtml/dist/mdtohtml.js'></script>
+
 </head>
 <body>
   <app-root></app-root>
