--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
 
   <link rel="icon" type="image/png" href="assets/icon/favicon.png">
   <link href="https://cdn.materialdesignicons.com/2.1.19/css/materialdesignicons.min.css" rel="stylesheet" />
+  <link href="./fonts.css" rel="stylesheet">
 
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes">
